Issue #INT-169 by cfuller: Fixed a problem where the visual cues on the Upload/Download buttons were flickering

--- a/style/base.css
+++ b/style/base.css
@@ -222,13 +222,15 @@ a.language-icon {
 }
 
 .notify-filtered-action {
-  float:right;
   font-size: 70%;
+  padding-left:30px;
+  position:absolute;
 }
 
 .notify-checked-action {
-  float:right;
   font-size: 70%;
+  padding-left:30px;
+  position:absolute;
 }
 
 .no-localized-title, .no-localized-title a {
